--- a/src/Crypt32.Tests/Crypt32.Tests.csproj
+++ b/src/Crypt32.Tests/Crypt32.Tests.csproj
@@ -7,6 +7,9 @@
     <ProjectReference Include="..\Windows.Core\Windows.Core.csproj" />
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="*.pfx" />
+  </ItemGroup>
+  <ItemGroup>
     <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
   </ItemGroup>
 </Project>
