--- a/src/MSCorEE.Tests/MSCorEE.Tests.csproj
+++ b/src/MSCorEE.Tests/MSCorEE.Tests.csproj
@@ -15,6 +15,9 @@
     </COMFileReference>
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="Keys\*.snk" />
+  </ItemGroup>
+  <ItemGroup>
     <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
   </ItemGroup>
 </Project>
