--- a/src/Directory.Build.targets
+++ b/src/Directory.Build.targets
@@ -4,8 +4,11 @@
   </ItemGroup>
 
   <Target Name="BuildProjectReferencesFirst" BeforeTargets="ResolveProjectReferences">
+    <!-- The set of global properties we use is carefully chosen so that when building a sln,
+         the project is not re-built by this invocation after the sln builds it. -->
     <MSBuild Projects="@(BuildProjectReference)"
              BuildInParallel="$(BuildInParallel)"
-             Properties="Configuration=$(Configuration);Platform=$(Platform);TargetFramework=net46" />
+             Properties="Configuration=$(Configuration);Platform=$(Platform)"
+             RemoveProperties="TargetFramework" />
   </Target>
 </Project>
