--- a/templates/LIBNAME.Tests/LIBNAME.Tests.csproj
+++ b/templates/LIBNAME.Tests/LIBNAME.Tests.csproj
@@ -4,6 +4,7 @@
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\Windows.Core\Windows.Core.csproj" />
+    <ProjectReference Include="..\LIBNAME\LIBNAME.csproj" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
