Skip parallel test execution on appveyor
This is a workaround for xunit/xunit#1152

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -14,7 +14,7 @@ before_build:
 build_script:
 - ps: .\build.ps1 -Build
 test_script:
-- ps: .\build.ps1 -Test -UseVSTestConsole
+- ps: .\build.ps1 -Test -NoParallelTests
 artifacts:
 - path: bin\**\*.nupkg
   name: NuGet Package
