--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,6 +1,6 @@
 version: 1.0.{build}
 skip_tags: true
-os: Visual Studio 2017 RC
+os: Visual Studio 2017
 configuration: Release
 environment:
   VisualStudioVersion: 15.0
