--- a/src/CodeGenerationAttributes/CodeGenerationAttributes.csproj
+++ b/src/CodeGenerationAttributes/CodeGenerationAttributes.csproj
@@ -4,7 +4,7 @@
     <AssemblyName>CodeGenerationAttributes</AssemblyName>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="CodeGeneration.Roslyn" Version="0.1.57" PrivateAssets="all" />
+    <PackageReference Include="CodeGeneration.Roslyn.Attributes" Version="$(CodeGenerationPackageVersion)" PrivateAssets="all" />
   </ItemGroup>
   <Import Project="$(MSBuildSDKExtrasTargets)" Condition="Exists('$(MSBuildSDKExtrasTargets)')" />
 </Project>
