--- a/src/BCrypt/BCrypt.csproj
+++ b/src/BCrypt/BCrypt.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFrameworks>portable-net45+win8+wpa81;portable-net4+win8+wpa81;net40</TargetFrameworks>
+    <TargetFrameworks>portable-net45+win8+wpa81;portable-net4+win8+wpa81;net40;net20</TargetFrameworks>
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\Kernel32\Kernel32.csproj" />
