--- a/src/CodeGenerationAttributes/CodeGenerationAttributes.csproj
+++ b/src/CodeGenerationAttributes/CodeGenerationAttributes.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFrameworks>net40;portable-net4+win8+wpa81;portable-net45+win8+wpa81</TargetFrameworks>
+    <TargetFrameworks>net40;net20;portable-net4+win8+wpa81;portable-net45+win8+wpa81</TargetFrameworks>
     <AssemblyName>CodeGenerationAttributes</AssemblyName>
   </PropertyGroup>
   <ItemGroup>
