--- a/src/Win32/Win32.csproj
+++ b/src/Win32/Win32.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>net40</TargetFramework>
+    <TargetFrameworks>net40;net20</TargetFrameworks>
     <Summary>P/Invoke methods for Win32 APIs</Summary>
     <Description>P/Invoke methods for Win32 APIs</Description>
 
