Optimize coverage data generation
* Fix package restore for Update-CoverageReport.ps1 script.
* Only generate pinvoke data for net45 targets since it takes a while during the build and we only need one exhaustive list.
* Only copy the .exports.txt file for the net45 target framework

--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -59,7 +59,7 @@
   <ItemGroup>
     <GeneratorAssemblySearchPaths Include="$(MSBuildThisFileDirectory)..\bin\$(Configuration)\net46\" />
     <AdditionalFiles Include="$(MSBuildThisFileDirectory)stylecop.json"/>
-    <None Include="$(MSBuildProjectName).exports.txt" Condition=" Exists('$(MSBuildProjectName).exports.txt') ">
+    <None Include="$(MSBuildProjectName).exports.txt" Condition=" Exists('$(MSBuildProjectName).exports.txt') and '$(TargetFramework)' == 'net45' ">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
