--- a/src/CodeGenerationAttributes/CodeGenerationAttributes.csproj
+++ b/src/CodeGenerationAttributes/CodeGenerationAttributes.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFrameworks>netstandard1.1;portable-net45+win8+wpa81;portable-net4+win8+wpa81;net40;net20</TargetFrameworks>
+    <TargetFrameworks>$(PortableOnlyFrameworks);net20</TargetFrameworks>
     <AssemblyName>CodeGenerationAttributes</AssemblyName>
   </PropertyGroup>
   <ItemGroup>
