--- a/appveyor.yml
+++ b/appveyor.yml
@@ -15,13 +15,10 @@ build_script:
 - ps: .\build.ps1 -Build
 test_script:
 - ps: .\build.ps1 -Test -NoParallelTests
-artifacts:
-- path: bin\**\*.nupkg
-  name: NuGet Package
-- path: bin\**\*.pinvokes.txt
-  name: PInvoke method coverage
-- path: bin\**\*.exports.txt
-  name: Exported methods
+after_build:
+- ps: Get-ChildItem bin\*.pinvokes.txt -rec |? { $_.directory -notmatch 'tests' } |% { Push-AppveyorArtifact $_ -DeploymentName "PInvoke method coverage" }
+- ps: Get-ChildItem bin\*.exports.txt -rec |? { $_.directory -notmatch 'tests' } |% { Push-AppveyorArtifact $_ -DeploymentName "Exported methods" }
+- ps: Get-ChildItem bin\*.nupkg -rec |% { Push-AppveyorArtifact $_ -DeploymentName "NuGet Package" }
 notifications:
 - provider: Webhook
   url: https://webhooks.gitter.im/e/c4d61fc5002e9a62a22f
