Changes due to case sensitivity on Visual Studio Mac.
Thanks to @mrward (https://gist.github.com/mrward/a6edbe861c2c50b32745403ef5df396e)

--- a/src/NTDll.Tests/NTDll.Tests.csproj
+++ b/src/NTDll.Tests/NTDll.Tests.csproj
@@ -3,7 +3,7 @@
     <TargetFrameworks>net46</TargetFrameworks>
   </PropertyGroup>
   <ItemGroup>
-    <ProjectReference Include="..\NtDll\NtDll.csproj" />
+    <ProjectReference Include="..\NTDll\NTDll.csproj" />
     <ProjectReference Include="..\Windows.Core\Windows.Core.csproj" />
   </ItemGroup>
   <ItemGroup>
