--- a/src/nuget.config
+++ b/src/nuget.config
@@ -8,5 +8,6 @@
     <add key="myget.org/F/aarnott" value="https://www.myget.org/F/aarnott/api/v3/index.json" />
     <add key="CodeGeneration.Roslyn CI" value="https://ci.appveyor.com/nuget/codegeneration-roslyn" />
     <add key="MSBuildSdkExtras CI" value="https://www.myget.org/F/msbuildsdkextras/api/v3/index.json" />
+    <add key="corefxlab" value="https://dotnet.myget.org/F/dotnet-corefxlab/api/v3/index.json" />
   </packageSources>
 </configuration>
