--- a/src/Win32/Win32.csproj
+++ b/src/Win32/Win32.csproj
@@ -31,6 +31,7 @@
     <ProjectReference Include="..\Windows.Core\Windows.Core.csproj" />
     <ProjectReference Include="..\Windows.ShellScalingApi\Windows.ShellScalingApi.csproj" />
     <ProjectReference Include="..\Wtsapi32\Wtsapi32.csproj" />
+    <ProjectReference Include="..\Magnification\Magnification.csproj" />
   </ItemGroup>
   <Import Project="$(MSBuildSDKExtrasTargets)" Condition="Exists('$(MSBuildSDKExtrasTargets)')" />
 </Project>
