Control all NuGet package sources

--- a/src/nuget.config
+++ b/src/nuget.config
@@ -4,6 +4,7 @@
     <add key="repositorypath" value="..\packages" />
   </config>
   <packageSources>
+    <clear />
     <add key="nuget.org" value="https://api.nuget.org/v3/index.json" protocolVersion="3" />
     <add key="myget.org/F/aarnott" value="https://www.myget.org/F/aarnott/api/v3/index.json" />
     <add key="CodeGeneration.Roslyn CI" value="https://ci.appveyor.com/nuget/codegeneration-roslyn" />
