Added a project for Ole32, along with PInvokes for core COM call cancelation API's, and related HResult codes.

--- a/src/Win32/Win32.csproj
+++ b/src/Win32/Win32.csproj
@@ -21,6 +21,7 @@
     <ProjectReference Include="..\NCrypt\NCrypt.csproj" />
     <ProjectReference Include="..\NetApi32\NetApi32.csproj" />
     <ProjectReference Include="..\NTDll\NTDll.csproj" />
+    <ProjectReference Include="..\Ole32\Ole32.csproj" />
     <ProjectReference Include="..\Psapi\Psapi.csproj" />
     <ProjectReference Include="..\SetupApi\SetupApi.csproj" />
     <ProjectReference Include="..\Shell32\Shell32.csproj" />
