* Changing Ole32.csproj to target $(DesktopOnlyFrameworks) instead of $(DesktopAndPortableFrameworks) * Removing Ole32 helper methods * Changing Ole32 methods currently taking IntPtr parameters to instead take void* parameters. This lets codegen to take care of auto-generating the corresponding IntPtr version. * Fixing up Ole32.Unshipped.txt appropriately.

--- a/src/Ole32/Ole32.csproj
+++ b/src/Ole32/Ole32.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFrameworks>$(DesktopAndPortableFrameworks)</TargetFrameworks>
+    <TargetFrameworks>$(DesktopOnlyFrameworks)</TargetFrameworks>
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\Windows.Core\Windows.Core.csproj" />
