Include store-banned APIs for all except actual Win8 targets

--- a/src/Crypt32/Crypt32.csproj
+++ b/src/Crypt32/Crypt32.csproj
@@ -5,7 +5,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Windows.Core\Windows.Core.csproj" />
     <ProjectReference Include="..\NCrypt\NCrypt.csproj" />
-    <ProjectReference Include="..\AdvApi32\AdvApi32.csproj" Condition=" '$(TargetsDesktop)' == 'true' " />
+    <ProjectReference Include="..\AdvApi32\AdvApi32.csproj" Condition=" '$(IncludeStoreBannedAPIs)' == 'true' " />
   </ItemGroup>
   <Import Project="$(MSBuildSDKExtrasTargets)" Condition="Exists('$(MSBuildSDKExtrasTargets)')" />
 </Project>
