--- a/src/Directory.Build.targets
+++ b/src/Directory.Build.targets
@@ -4,7 +4,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Remove="desktop\**" Condition=" '$(TargetsDesktop)' != 'true' " />
+    <Compile Remove="desktop\**" Condition=" '$(IncludeStoreBannedAPIs)' != 'true' " />
     <Compile Include="$(MSBuildThisFileDirectory)net20Helpers\*.cs"
              Condition=" '$(TargetFramework)' == 'net20' and '$(MSBuildProjectName)' != 'CodeGenerationAttributes' " />
     <Compile Include="$(MSBuildThisFileDirectory)AssemblyAttributes.cs" Condition=" '$(IsPInvokeProject)' == 'true' " />
