--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -1,6 +1,11 @@
 version: '{build}'
 skip_tags: true
 skip_branch_with_pr: true
+branches:
+  only:
+  - master
+  - /^v\d+(?:\.\d+)?$/
+  - /[\b_]validate\b/
 os: Visual Studio 2017
 configuration: Release
 environment:
