--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -6,6 +6,10 @@ branches:
   - master
   - /^v\d+(?:\.\d+)?$/
   - /[\b_]validate\b/
+skip_commits:
+  files:
+    - doc/*
+    - '**/*.md'
 os: Visual Studio 2017
 configuration: Release
 environment:
