--- a/src/DwmApi/DwmApi.csproj
+++ b/src/DwmApi/DwmApi.csproj
@@ -5,6 +5,7 @@
   <ItemGroup>
     <ProjectReference Include="..\UxTheme\UxTheme.csproj" />
     <ProjectReference Include="..\Windows.Core\Windows.Core.csproj" />
+    <PackageReference Include="System.Drawing.Common" Version="4.5.0" Condition=" '$(TargetFramework)' == 'netstandard2.0' " />
   </ItemGroup>
   <Import Project="$(MSBuildSDKExtrasTargets)" Condition="Exists('$(MSBuildSDKExtrasTargets)')" />
 </Project>
