--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -10,6 +10,7 @@ skip_commits:
   files:
     - doc/*
     - '**/*.md'
+    - .vsts-ci.yml
 os: Visual Studio 2017
 configuration: Release
 environment:
